[gd_scene load_steps=9 format=2]

[ext_resource path="res://DoHoa/MotSoThuKhac/pause.png" type="Texture" id=1]
[ext_resource path="res://DoHoa/MotSoThuKhac/play1.png" type="Texture" id=2]
[ext_resource path="res://DoHoa/MotSoThuKhac/restart.png" type="Texture" id=3]
[ext_resource path="res://DoHoa/MotSoThuKhac/restart1.png" type="Texture" id=4]
[ext_resource path="res://Tep/PauseGame.gd" type="Script" id=5]
[ext_resource path="res://DoHoa/MotSoThuKhac/next.png" type="Texture" id=6]
[ext_resource path="res://DoHoa/MotSoThuKhac/next3.png" type="Texture" id=7]

[sub_resource type="Animation" id=30]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.027451, 0.0235294, 0.0235294, 1 ) ]
}

[node name="PauseGame" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1200.0
margin_bottom = 680.0
color = Color( 1, 1, 1, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiTiep" type="TextureButton" parent="."]
margin_left = 420.0
margin_top = 230.0
margin_right = 634.0
margin_bottom = 445.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThoatGame" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = 230.0
margin_right = 764.0
margin_bottom = 445.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 1202.0
margin_bottom = 681.0
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/fade = SubResource( 30 )

[node name="QuayLaiManHinh" type="TextureButton" parent="."]
margin_left = 680.0
margin_top = 230.0
margin_right = 894.0
margin_bottom = 445.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
[connection signal="pressed" from="ChoiTiep" to="." method="_on_ChoiTiep_pressed"]
[connection signal="pressed" from="ThoatGame" to="." method="_on_ThoatGame_pressed"]
[connection signal="pressed" from="QuayLaiManHinh" to="." method="_on_QuayLaiManHinh_pressed"]
